# cpp-grid-search

./: .gitignore  CMakeLists.txt  README.md  all.bash  auxiliary.h  delaunay.h  example.cpp  example_delaunay.cpp  example_triangles.cpp  grid_search.cpp  grid_search.h  run_example.bash  seg_fault_does_not_happen.cpp  seg_fault_happens.cpp  set_fault_does_not_happen.rs  test_find_works_1.cpp  test_interp_works_1.cpp  test_new_works_1.cpp
examples/: CMakeLists.txt  example_delaunay.cpp  example_delaunay_2d.cpp  example_delaunay_3d.cpp  example_grid_search.cpp  example_grid_search_2d.cpp  example_grid_search_3d.cpp
src/: CMakeLists.txt  delaunay.h  delaunay_2d.h  delaunay_3d.h  grid_search.h  tritet_coords.h
src/tests/: CMakeLists.txt  test_delaunay_1.cpp  test_delaunay_2d_1.cpp  test_delaunay_3d_1.cpp  test_find_works_1.cpp  test_grid_search_2d_1.cpp  test_grid_search_2d_2.cpp  test_grid_search_3d_1.cpp  test_interp_works_1.cpp  test_large_tris_1.cpp  test_new_works_1.cpp  test_tritet_coords.cpp
src/tetgen/: IMPORTANT.md  interface_tetgen.cpp  interface_tetgen.h  tetgen.cxx  tetgen.h
src/triangle/: IMPORTANT.md  triangle.h
